// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accumulate 1`] = `
Object {
  "alertResult": undefined,
  "code": "accumulate((curr, acc) => curr + acc, 0, list(2, 3, 4, 1));",
  "displayResult": undefined,
  "result": 10,
  "visualiseListResult": undefined,
}
`;

exports[`append 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(append(list(\\"string\\", 123), list(456, null, undefined)), list(\\"string\\", 123, 456, null, undefined));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`assoc 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(assoc(3, list(pair(1, 2), pair(3, 4))), pair(3, 4));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`assoc not found 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(assoc(2, list(pair(1, 2), pair(3, 4))), false);",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`bad index error list_ref 1`] = `
Object {
  "alertResult": undefined,
  "code": "list_ref(list(1, 2, 3), 3);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered null",
  "visualiseListResult": undefined,
}
`;

exports[`bad index error list_ref 3`] = `
Object {
  "alertResult": undefined,
  "code": "list_ref(list(1, 2, 3), -1);",
  "displayResult": undefined,
  "error": "Line 1: Error: list_ref(xs, n) expects a positive integer as argument n, but encountered -1",
  "visualiseListResult": undefined,
}
`;

exports[`bad index error list_ref 5`] = `
Object {
  "alertResult": undefined,
  "code": "list_ref(list(1, 2, 3), 1.5);",
  "displayResult": undefined,
  "error": "Line 1: Error: list_ref(xs, n) expects a positive integer as argument n, but encountered 1.5",
  "visualiseListResult": undefined,
}
`;

exports[`bad index error list_ref 7`] = `
Object {
  "alertResult": undefined,
  "code": "list_ref(list(1, 2, 3), '1');",
  "displayResult": undefined,
  "error": "Line 1: Error: list_ref(xs, n) expects a positive integer as argument n, but encountered 1",
  "visualiseListResult": undefined,
}
`;

exports[`bad number error build_list 1`] = `
Object {
  "alertResult": undefined,
  "code": "build_list(-1, x => x);",
  "displayResult": undefined,
  "error": "Line 1: Error: build_list(n, fun) expects a positive integer as argument n, but encountered -1",
  "visualiseListResult": undefined,
}
`;

exports[`bad number error build_list 3`] = `
Object {
  "alertResult": undefined,
  "code": "build_list(1.5, x => x);",
  "displayResult": undefined,
  "error": "Line 1: Error: build_list(n, fun) expects a positive integer as argument n, but encountered 1.5",
  "visualiseListResult": undefined,
}
`;

exports[`bad number error build_list 5`] = `
Object {
  "alertResult": undefined,
  "code": "build_list('1', x => x);",
  "displayResult": undefined,
  "error": "Line 1: Error: build_list(n, fun) expects a positive integer as argument n, but encountered 1",
  "visualiseListResult": undefined,
}
`;

exports[`bad number error enum_list 1`] = `
Object {
  "alertResult": undefined,
  "code": "enum_list('1', '5');",
  "displayResult": undefined,
  "error": "Line 1: Error: enum_list(start, end) expects a number as argument start, but encountered 1",
  "visualiseListResult": undefined,
}
`;

exports[`bad number error enum_list 3`] = `
Object {
  "alertResult": undefined,
  "code": "enum_list('1', 5);",
  "displayResult": undefined,
  "error": "Line 1: Error: enum_list(start, end) expects a number as argument start, but encountered 1",
  "visualiseListResult": undefined,
}
`;

exports[`bad number error enum_list 5`] = `
Object {
  "alertResult": undefined,
  "code": "enum_list(1, '5');",
  "displayResult": undefined,
  "error": "Line 1: Error: enum_list(start, end) expects a number as argument start, but encountered 5",
  "visualiseListResult": undefined,
}
`;

exports[`build_list 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(build_list(5, x => x * x), list(0, 1, 4, 9, 16));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`empty list is null 1`] = `
Object {
  "alertResult": undefined,
  "code": "list();",
  "displayResult": undefined,
  "result": null,
  "visualiseListResult": undefined,
}
`;

exports[`enum_list 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(enum_list(1, 5), list(1, 2, 3, 4, 5));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`enum_list with floats 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(enum_list(1.5, 5), list(1.5, 2.5, 3.5, 4.5));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`filter 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(filter(x => x <= 4, list(2, 10, 1000, 1, 3, 100, 4, 5, 2, 1000)), list(2, 1, 3, 4, 2));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`for_each 1`] = `
Object {
  "alertResult": undefined,
  "code": "let sum = 0;
for_each(x => {
  sum = sum + x;
}, list(1, 2, 3));
sum;",
  "displayResult": undefined,
  "result": 6,
  "visualiseListResult": undefined,
}
`;

exports[`head works 1`] = `
Object {
  "alertResult": undefined,
  "code": "head(pair(1, 'a string \\"\\"'));",
  "displayResult": undefined,
  "result": 1,
  "visualiseListResult": undefined,
}
`;

exports[`list creates list 1`] = `
Object {
  "alertResult": undefined,
  "code": "function f() { return 1; }
list(1, 'a string \\"\\"', () => a, f, true, 3.14);",
  "displayResult": undefined,
  "result": Array [
    1,
    Array [
      "a string \\"\\"",
      Array [
        [Function],
        Array [
          [Function],
          Array [
            true,
            Array [
              3.14,
              null,
            ],
          ],
        ],
      ],
    ],
  ],
  "visualiseListResult": undefined,
}
`;

exports[`list_ref 1`] = `
Object {
  "alertResult": undefined,
  "code": "list_ref(list(1, 2, 3, \\"4\\", 4), 4);",
  "displayResult": undefined,
  "result": 4,
  "visualiseListResult": undefined,
}
`;

exports[`list_to_string 1`] = `
Object {
  "alertResult": undefined,
  "code": "list_to_string(list(1, 2, 3));",
  "displayResult": undefined,
  "result": "[1, [2, [3, null]]]",
  "visualiseListResult": undefined,
}
`;

exports[`map 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(map(x => 2 * x, list(12, 11, 3)), list(24, 22, 6));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`member 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(
  member(\\"string\\", list(1, 2, 3, \\"string\\", 123, 456, null, undefined)),
  list(\\"string\\", 123, 456, null, undefined));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`non-list error accumulate 1`] = `
Object {
  "alertResult": undefined,
  "code": "accumulate((x, y) => x + y, [1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered undefined",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error accumulate 3`] = `
Object {
  "alertResult": undefined,
  "code": "accumulate((x, y) => x + y, [1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered undefined",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error append 1`] = `
Object {
  "alertResult": undefined,
  "code": "append([1, 2, 3], list(1, 2, 3));",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error assoc 1`] = `
Object {
  "alertResult": undefined,
  "code": "assoc(1, [1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error filter 1`] = `
Object {
  "alertResult": undefined,
  "code": "filter(x => true, [1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error for_each 1`] = `
Object {
  "alertResult": undefined,
  "code": "for_each(x=>x, [1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: for_each expects a list as argument xs, but encountered 1,2,3",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error head 1`] = `
Object {
  "alertResult": undefined,
  "code": "head([1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error length 1`] = `
Object {
  "alertResult": undefined,
  "code": "length([1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: tail(xs) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error map 1`] = `
Object {
  "alertResult": undefined,
  "code": "map(x=>x, [1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error member 1`] = `
Object {
  "alertResult": undefined,
  "code": "member(1, [1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error remove 1`] = `
Object {
  "alertResult": undefined,
  "code": "remove(1, [1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error remove_all 1`] = `
Object {
  "alertResult": undefined,
  "code": "remove_all(1, [1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error reverse 1`] = `
Object {
  "alertResult": undefined,
  "code": "reverse([1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: reverse(xs) expects a list as argument xs, but encountered 1,2,3",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error set_head 1`] = `
Object {
  "alertResult": undefined,
  "code": "set_head([1, 2, 3], 4);",
  "displayResult": undefined,
  "error": "Line 1: Error: set_head(xs,x) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error set_tail 1`] = `
Object {
  "alertResult": undefined,
  "code": "set_tail([1, 2, 3], 4);",
  "displayResult": undefined,
  "error": "Line 1: Error: set_tail(xs,x) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`non-list error tail 1`] = `
Object {
  "alertResult": undefined,
  "code": "tail([1, 2, 3]);",
  "displayResult": undefined,
  "error": "Line 1: Error: tail(xs) expects a pair as argument xs, but encountered [1, 2, 3]",
  "visualiseListResult": undefined,
}
`;

exports[`pair creates pair 1`] = `
Object {
  "alertResult": undefined,
  "code": "pair(1, 'a string \\"\\"');",
  "displayResult": undefined,
  "result": Array [
    1,
    "a string \\"\\"",
  ],
  "visualiseListResult": undefined,
}
`;

exports[`remove 1`] = `
Object {
  "alertResult": undefined,
  "code": "remove(1, list(1));",
  "displayResult": undefined,
  "result": null,
  "visualiseListResult": undefined,
}
`;

exports[`remove not found 1`] = `
Object {
  "alertResult": undefined,
  "code": "remove(2, list(1));",
  "displayResult": undefined,
  "result": Array [
    1,
    null,
  ],
  "visualiseListResult": undefined,
}
`;

exports[`remove_all 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(remove_all(1, list(1, 2, 3, 4, 1, 1, \\"1\\", 5, 1, 1, 6)), list(2, 3, 4, \\"1\\", 5, 6));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`remove_all not found 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(remove_all(1, list(2, 3, \\"1\\")), list(2, 3, \\"1\\"));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`reverse 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(reverse(list(\\"string\\", null, undefined, null, 123)), list(123, null, undefined, null, \\"string\\"));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`set_head 1`] = `
Object {
  "alertResult": undefined,
  "code": "let p = pair(1, 2);
const q = p;
set_head(p, 3);
p === q && equal(p, pair(3, 2));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`set_tail 1`] = `
Object {
  "alertResult": undefined,
  "code": "let p = pair(1, 2);
const q = p;
set_tail(p, 3);
p === q && equal(p, pair(1, 3));",
  "displayResult": undefined,
  "result": true,
  "visualiseListResult": undefined,
}
`;

exports[`tail of a 1 element list is null 1`] = `
Object {
  "alertResult": undefined,
  "code": "tail(list(1));",
  "displayResult": undefined,
  "result": null,
  "visualiseListResult": undefined,
}
`;

exports[`tail works 1`] = `
Object {
  "alertResult": undefined,
  "code": "tail(pair(1, 'a string \\"\\"'));",
  "displayResult": undefined,
  "result": "a string \\"\\"",
  "visualiseListResult": undefined,
}
`;
